[package]
name = "awlyc-values"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.23"
smallvec = "1.9.0"
la-arena = "0.2.1"
text-size = "1.1.0"
itertools = "0.10.3"
serde = { version = "1.0.139", features = [ "derive" ] }
awlyc-parser = { path = "../awlyc-parser" }
awlyc-error = { path = "../awlyc-error" }