[package]
name = "awlyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-size = "1.1.0"
smol_str = "0.1.23"
la-arena = "0.2.1"
serde = "1.0.139"
awlyc-parser = { path = "../awlyc-parser" }
awlyc-values = { path = "../awlyc-values" }
awlyc-error = { path = "../awlyc-error" }
